tabs!
Also optimised startup time (catalina.properties)